modules/gdscript/tests/scripts/analyzer/errors/immutable_lambda_parameter_attempt_to_modify.gd
func test():
	var lambda = func (let delta):
		delta = 0.0
	lambda(0.0)
